tools/tests/ui/fail/l1100.cnf
// Test file for error code: L1100
// Expected error: Underflow TEXT-UTF8 character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
